...
                android:id="@+id/start_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.judopay.view.JudoEditText
                    android:id="@+id/start_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_date_label"
                    tools:ignore="TextFields" />

            </com.google.android.material.textfield.TextInputLayout>
...
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/issue_number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.judopay.view.JudoEditText
                        android:id="@+id/issue_number_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/issue_number_label" />

                </com.google.android.material.textfield.TextInputLayout>

...
