...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_entry_height">

    <Button
        android:id="@+id/entryButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_background"
        android:text="@string/pay"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_medium"
...
